--- a/location.html
+++ b/location.html
@@ -136,9 +136,9 @@
 
 <div id="navbar">
     <div class="fill_01"></div>
-    <a href="About.html">ABOUT</a>
+    <a href="about.html">ABOUT</a>
     <div class="fill_02"></div>
-    <a href="Location.html">LOCATION</a>
+    <a href="location.html">LOCATION</a>
     <div class="fill_02"></div>
     <a href="javascript:void(0)">MENU</a>
     <div class="fill_01"></div>
@@ -146,12 +146,12 @@
 
 <div class="location_01">
 
-    <div class="title"><a href="Minneapolis.html">MINNEAPOLIS</a></div>
+    <div class="title"><a href="minneapolis.html">MINNEAPOLIS</a></div>
 </div>
 
 <div class="location_02">
 
-    <div class="title"><a href="St_Paul.html"> ST. PAUL</a></div>
+    <div class="title"><a href="st_paul.html"> ST. PAUL</a></div>
 </div>
 
 <div class="footer"></div>
