--- a/minneapolis.html
+++ b/minneapolis.html
@@ -122,9 +122,9 @@
 
 <div id="navbar">
     <div class="fill_01"></div>
-    <a href="About.html">ABOUT</a>
+    <a href="about.html">ABOUT</a>
     <div class="fill_02"></div>
-    <a href="Location.html">LOCATION</a>
+    <a href="location.html">LOCATION</a>
     <div class="fill_02"></div>
     <a href="javascript:void(0)">MENU</a>
     <div class="fill_01"></div>
