--- a/index.html
+++ b/index.html
@@ -1,3 +1,55 @@
+<!--                                    `.-//oosyyyhhhhhhyyyso+/:-.`
+                               .:+syhhhhhhhyysssooooossyyhhhhhhhys+:.
+                          `-+shhhhhyo+/-.``               `.-:+oshhhhhs/-`
+                       ./shhhhyo/-`       `.--::/:-..`           `.:+shhhyo:.
+                    ./shhhyo:.`    `-:+osyyo+/-.``                    `-+shhhs/`
+                 `:shhhy+-`    .:+shhhyo/.`                              `./shhyo-
+               `/yhhho-`    -+yhddhs/.`                                      ./yhhs:`
+             `/yhhy/.    .+yddddy+.`                                           `:shhy:`
+           `:yhhy/`   `:sddddds-`                                                `-shhs:
+          .shhy/`   `/ydmdddo-                                                     `:yhho.
+        `/hhho.    :hmmmmds-                                                         `/hhy:
+       `ohhy:    .ymmmmmh/`                                                            -shho`
+      .yhhs.    /dmmmmms.                                                               `ohhs.
+     -yhho`   `smmmmmmo`                                                                  /hhy.
+    -yhh+`   .ymmmmmm+                                                                     /hhy.
+   .yhho    .hmmmmmm+                                                                       /hhy`
+  `shhs`   `hmmmmmms                                                                         ohho
+  /hhy.    smmmmmmh`                                                                         `yhh:
+ .hhh:    :mmmmmmm:                                                                           -hhy`
+ +hhy    `dNNNNNNh                                                                             ohh+
+`hhh:    /NNNNNNN/                                                                             -hhy`
+:hhh`    hNNNNNNN.                                                                              yhh:
+ohho    `NNNNNNNm                                              .-`                              +hho
+shh/    -NNNNNNNd                                             `ss:                              :hhy
+hhh:    :NNNNNNNm                        +                      `    +                          -hhh
+hhh:    :NNNNNNNN                       `h     `::`    -/      oh+  `y                          -hhh
+hhh:    -NNNNNNNN-                      `d     `MM.    yy      sMs  .d                :         -hhh
+shh/    `NNNNNNNNo                      .N      MM`  `h:h-     +Mo  .N````   .m+     `s         /hhy
++hho     hNNNNNNNm`                     -M      mM  `d/ /h``...+mo..:N`      .M+     `y         ohho
+-hhh     +NNNNNNNNo                     :M.   ``hm-:ys:-:d+.```:M+``/M-```   `M/     .d         yhh/
+`yhh:    `mNNNNNNNm-                 .-:oMo+ossohmomy:::-hm--..-M/` /M-       m:     .N        :hhh`
+ +hhs     /NNNNNNNNd`                -::sM+..```sNNh`    :M/   `M:  +M/       d-     -M`       shho
+ `yhh:     yNNNNNNNNh`                  +M+     sMd`      Nm`   N-  +M+       y.  `.-+M:.`    :hhh.
+  :hhy`    `dNNNNNNNNh.                 oMs    /Nm.       sM+   m.  oMs     -sdsoo/:-+M:`    `yhh+
+   ohho     .dNNNNNNNNd-                sMy   /NMy        -Mm`  h.  sMy     `.o.     -o.    `shhs`
+   `shh+     -dNNNNNNNmm+`              .:-   -o+s         dN/  s`  .:-       `             +hhy.
+    .yhh+     .ymmmmmmmmmy-                     `/         ..`  .                          +hhy-
+     .yhh+`    `ommmmmmmmmms.                                                            `ohhy-
+      `shho`     :hmmmmmmmmmdo-          ./:       /yhdhy/                              .shhy-
+       `+hhy-     `+dmmmmmmmmmds:`       /mh      `dNMMMNd`                            :yhhs.
+         :yhh+`     .odmmmmmmmmmmho-`     ``    -sy+-///-`                           .ohhh/`
+          `ohhy/`     .+hmmmmmmmmmmmho:.`       /hdo                       ```     `/yhhs-
+            -shhs:`     `:shmmmmmmmmddddyo/-``                        ``.:/:.`   `/yhhy/`
+              :shhy/`      `:shdddddddddddddhys+/:-.````````````.-:/+osso:`    ./yhhy/`
+                :shhy+-`      `-/shddddddddddddhhhhhhhyyyyyyyyhhhhhyo/-`    `-ohhhy/`
+                  -+yhhy+.`        .:+oyhhhhhhhhhhhhhhhhhhhhhyso/:.      `-+yhhhs:`
+                    `:ohhhy+:`           ..-://++++++++//:-.`        `.:oyhhhs/.
+                       `:oyhhhyo/-`                              `-/oyhhhhs/.
+                           ./oyhhhhyo+/-.``              ``.:/+syhhhhhs/-`
+                               .:/oyhhhhhhhyyssssoossssyhhhhhhhhys+:.
+                                     .-:/+ossyyyyyyyyyysso+/:-.`                                         -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,9 +71,9 @@
             width: 380px;
             height: 380px;
             border-radius: 190px;
-            background-color: #333333;
+            background-color: white;
             position: absolute;
-            top: 175px;
+            top: 170px;
             left: 400px;
         }
 
@@ -45,7 +97,7 @@
         }
 
         #navbar a:hover {
-            color: #999999;
+            color: rgb(220,220,220,.5);
         }
 
         #navbar .fill_01 {
@@ -62,6 +114,31 @@
             height: 80px;
             width: 282px;
             background-color: #722257;
+        }
+
+        .sec_03 {
+            width: 1180px;
+            height: 475px;
+            margin: 40px 0;
+            overflow: hidden;
+            padding: 0;
+            box-shadow: 0 5px 5px rgba(0, 0, 0, .5);
+        }
+
+        .slideshow {
+            background: url("Slideshow.gif") repeat-x;
+            height: 520px;
+            width: 8000px;
+            animation: slide 50s linear infinite;
+        }
+
+        @keyframes slide {
+            0%{
+                transform: translate3d(0, 0, 0);
+            }
+            100%{
+                transform: translate3d(-4000px, 0, 0);
+            }
         }
 
         .footer {
@@ -84,11 +161,13 @@
     <div class="fill_02"></div>
     <a href="location.html">LOCATION</a>
     <div class="fill_02"></div>
-    <a href="javascript:void(0)">MENU</a>
+    <a href="menuredirect.html">MENU</a>
     <div class="fill_01"></div>
 </div>
 
-    <div class="logo"></div>
+<div class="sec_03">
+    <div class="slideshow"></div> <div class="logo"><img src="MainLogo.gif" style="margin: 25px 25px"></div>
+</div>
     <div class="footer"></div>
 
 </body>
